Fix stylesheets whitespaces.

--- a/resources/public/css/visual-editor.css
+++ b/resources/public/css/visual-editor.css
@@ -1,121 +1,90 @@
 .autocomplete {
-	float:right;
-}
-
-.autocomplete input {
-
+  float:right;
 }
 
 .autocomplete .results a {
-	display: block;
+    display: block;
 }
 
-
-
 .layer {
-	border: 1px dashed;
-	margin-top: 5pt;
-
-	box-sizing: border-box;
-
-	height: 315px;
-
-	padding: 3pt;
+    border: 1px dashed;
+    margin-top: 5pt;
+    box-sizing: border-box;
+    height: 315px;
+    padding: 3pt;
 }
 
 
 .control {
-	padding: 3pt;
-	text-align: center;
+    padding: 3pt;
+    text-align: center;
 }
 
 .layer .layout {
-	position: relative;
-}	
-
-
-
+    position: relative;
+}
 
 .button {
-	position: absolute;
-
-	width: 50px;
-	height: 50px;
-
-	background-color: gainsboro;
-
-	font-family: 'Courier New', Courier, monospace;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: gainsboro;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .button.selected {
-	background-color: aquamarine;
+    background-color: aquamarine;
 }
 
 .button input {
-	width: 100%;
-	height: 100%;
-
-	background: transparent;
+    width: 100%;
+    height: 100%;
+    background: transparent;
     border: none;
-
     cursor: pointer;
-
     outline: none;
-
     padding-left: 5px;
 }
 
-
-
-
 .thumbnails {
-	height: 200px;
-	width: 1024px;
+    height: 200px;
+    width: 1024px;
 }
 
 .layout.thumb:after {
-  content:"";
-  display:table;
-  clear:both;
+    content:"";
+    display:table;
+    clear:both;
 }
 
-
-
 .layer.thumb {
-	height: 100%;
-	width:  200px;
-
-	display: inline-block;
-
-	margin-right: 4px;
-
-	border: 1px solid black;
-
-	cursor: pointer;
+    height: 100%;
+    width:  200px;
+    display: inline-block;
+    margin-right: 4px;
+    border: 1px solid black;
+    cursor: pointer;
 }
 
 .layer.thumb:nth-child(5n) {
-	margin-right: 0px;
+    margin-right: 0px;
 }
 
 .layer.thumb.hovered {
-	opacity: 0.5;
+    opacity: 0.5;
 }
 
 .layer.thumb .layout {
-	height: 60px;
+    height: 60px;
 }
-
 
 .layer.thumb.selected {
-	background-color: yellow;
+    background-color: yellow;
 }
 
-
 .button.thumb {
-	width: 10px;
+    width: 10px;
     height: 10px;
     font-size: xx-small;
     font-weight: bolder;
 }
-
